--- a/car_price_regression.ipynb
+++ b/car_price_regression.ipynb
@@ -77,7 +77,7 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "root = \".\\\"\n",
+    "root = \".\"\n",
     "subfolders = ['test_features', 'train_dir']\n",
     "\n",
     "\n",
